--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,11 @@ jobs:
             - name: Go Unit Test
               run: go test ./... -cover
 
+    security:
+        name: Security
+        runs-on: ubuntu-latest
+
+        steps:
             - name: Install gosec
               run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
