--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Go Unit Test
               run: go test ./... -cover
 
-            - name: Install Security gosec
+            - name: Install gosec
               run: go install github.com/securego/gosec/v2/cmd/gosec@latest
 
     style:
